# HIVEMIND

./: .gitignore  AGENTS.md  BOOTSTRAP.md  CHANGELOG.md  CLAUDE-CODE-PROMPT.md  CLAUDE.md  CODEX-INSTRUCTIONS.md  CODEX.md  CONTRIBUTING.md  DEPLOYMENT.md  GITHUB-READY-CHECKLIST.md  HIVEMIND-SETUP-GUIDE.md  HIVEMIND-Team-Summary.md  HIVEMIND.md  IDENTITY.md  INDEX.md  LICENSE  MULTI-AGENT-TEAM-ARCHITECTURE-HIVEMIND.md  Makefile  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SYSTEM-CHECK.md  bootstrap.sh  docker-compose.yml  hive  hivemind  install.sh  pacman3d.html  setup.sh  start-hivemind.sh  test-installation.sh  uninstall.sh
.claude/commands/: architect.md  debug.md  dev.md  hivemind.md  incident.md  infra.md  pentest.md  qa.md  recall.md  reviewer.md  sdlc.md  sec.md  sre.md  status.md
.codex/: instructions.md  trigger.md
.github/ISSUE_TEMPLATE/: 🐛-bug-report.md  💡-feature-request.md
agents/: base-prompt.md
agents/dev/: DEV_TEAM.md  architect.md  backend.md  devops.md  frontend.md  reviewer.md  writer.md
agents/development/: architect.md  backend-developer.md  code-reviewer.md  devops-liaison.md  frontend-developer.md  technical-writer.md
agents/infra/: INF_TEAM.md
agents/infrastructure/: architect.md  automation-engineer.md  automation.md  database-administrator.md  dba.md  infrastructure-architect.md  network-engineer.md  network.md  site-reliability-engineer.md  sre.md  sysadmin.md  systems-administrator.md
agents/qa/: QA_TEAM.md  architect.md  automation.md  data.md  manual-qa-tester.md  manual.md  performance-tester.md  performance.md  qa-architect.md  security-tester.md  security.md  test-automation-engineer.md  test-data-manager.md
agents/registry/: DEV-001.md  DEV-002.md  DEV-003.md  DEV-004.md  DEV-005.md  DEV-006.md  INF-001.md  INF-002.md  INF-003.md  INF-004.md  INF-005.md  INF-006.md  QA-001.md  QA-002.md  QA-003.md  QA-004.md  QA-005.md  QA-006.md  SEC-001.md  SEC-002.md  SEC-003.md  SEC-004.md  SEC-005.md  SEC-006.md
agents/sec/: SEC_TEAM.md
backend/: Dockerfile  README.md  alembic.ini  docker-compose.yml  hivemind.toml  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20241220_000000_initial_schema.py
backend/scripts/: healthcheck.sh  init-db.sql  prometheus.yml  rabbitmq-definitions.json  start.sh
backend/src/hivemind/: __init__.py  config.py
backend/src/hivemind/agents/: __init__.py  base.py  pool.py  teams.py
backend/src/hivemind/api/: __init__.py  dependencies.py  schemas.py  server.py  websocket.py
backend/src/hivemind/api/middleware/: __init__.py  auth.py  logging.py  rate_limit.py  tracing.py  validation.py
backend/src/hivemind/api/routes/: __init__.py  agents.py  completions.py  sessions.py
backend/src/hivemind/cli/: README.md  __init__.py  claude.py  codex.py  main.py  manager.py
backend/src/hivemind/core/: __init__.py  context.py  coordinator.py  dispatcher.py  router.py
backend/src/hivemind/ipc/: __init__.py  base.py  rabbitmq.py  redis.py  zeromq.py
backend/src/hivemind/memory/: __init__.py
backend/src/hivemind/memory/cache/: __init__.py  redis.py
backend/src/hivemind/memory/relational/: __init__.py  models.py  repository.py
backend/src/hivemind/memory/vector/: __init__.py  store.py
backend/src/hivemind/observability/: __init__.py  health.py  logging.py  metrics.py  tracing.py
backend/src/hivemind/resilience/: __init__.py  checkpoint.py  circuit_breaker.py  dlq.py  retry.py
backend/src/hivemind/security/: __init__.py  auth.py  rate_limit.py  validation.py
comms/: BUS.md  MESSAGE-BUS.md  SPAWN-PROTOCOL.md  SPAWN.md  TEAM-COORDINATION.md  TEAMS.md
config/: README.md  agents.json  agents.yaml  engines.yaml  hivemind.yaml  routing.json  routing.yaml  settings.json
core/: COORDINATOR.md  HEAD_CODEX.md  orchestrator.sh  router.sh  spawner.sh  synthesizer.sh
docs/: IMPLEMENTATION.md  QUICK-REFERENCE.md  SETUP-GUIDE.md  UPGRADE_GUIDE.md  example-prompts.md
engines/: claude-code.sh  codex.sh  engine.sh
memory/: COMMANDS.md  ENGINE.md  IMPLEMENTATION-CHECKLIST.md  MEMORY-PROTOCOL.md  MEMORY.md  QUERY.md  README.md  TRIGGERS.md
orchestration/: COORDINATOR.md  context-manager.md  task-router.md
protocols/: MINIMAL_OUTPUT.md  QUALITY-GATES.md  escalation.md  handoffs.md  messages.md  security-gates.md
reports/: HIVEMIND-IMPLEMENTATION-REPORT.md  REPORT_TEMPLATE.md
runtime/: CONTROLLER.md  FILTER.md  OUTPUT-FILTER.md  POSTTASK.md  PREDICTOR.md  PREFLIGHT.md  PROJECT-DETECTOR.md  ROUTER.md  SELF-IMPROVE.md  VOICE-RULES.md
scripts/: health-check.sh  install-upgrade.sh
teams/: development.md  infrastructure.md  qa.md  security.md
templates/: architecture-decision-record.md  change-request.md  code-review-findings.md  compliance-checklist.md  deployment-checklist.md  incident-report.md  performance-baseline.md  security-report.md  test-results.md
tests/: __init__.py  conftest.py  test_claude_agent.py  test_codex_head.py  test_memory.py  test_routing.py
tui/: .gitignore  FILES.txt  IMPLEMENTATION-REPORT.md  INSTALL.md  MANIFEST.txt  PHASE9-COMPLETE.md  PHASE9-SUMMARY.md  PHASE_10_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  run-tui.sh  verify-setup.sh
tui/examples/: phase10_usage.py
tui/src/hivemind_tui/: __init__.py  __main__.py  app.py  config.py  styles.css
tui/src/hivemind_tui/engine/: __init__.py  auth.py  claude_agent.py  client.py  codex_head.py  coordinator.py  dialogue.py  memory.py  state.py  websocket.py
tui/src/hivemind_tui/handlers/: __init__.py  commands.py  input.py
tui/src/hivemind_tui/models/: __init__.py  agents.py  messages.py
tui/src/hivemind_tui/screens/: __init__.py  auth_screen.py  chat.py  main.py  status_log.py
tui/src/hivemind_tui/styles/: __init__.py  app.tcss  chat.tcss  colors.py  themes.py  widgets.tcss
tui/src/hivemind_tui/widgets/: __init__.py  agent_list.py  dialogue_view.py  input_box.py  message_view.py  orchestration_panel.py  status_bar.py  status_log.py
workflows/: code-review.md  compliance-audit.md  full-sdlc.md  incident-response.md  infrastructure-deploy.md  security-assessment.md
(+150 files in other folders)
